Add default internet access for sessions
